# Geometria-Computacional

./: Clase 1.txt  Clase 2.txt  Evaluacion1.txt  Problema_de_Klee_demostracion_de_suficiencia_.txt  Propiedades_de_las_triagulaciones.txt
Auxiliares/Aux1_Archivos/: assert_ex.cpp  readmeEjecucion.txt
CGAL-5.6.1/examples/Triangulation_2/: CMakeLists.txt  README  draw_surface_mesh.cpp
Clase 3/Aux1_Archivos/: complejo_amiga.cpp  rectangulo.hpp
Clases/: Clase 1.txt  Clase 2.txt  Clase 5.txt  ConstruccionDeDiagonales.txt  IntersecciónDeSegmentos.txt
Clases/Clase 3/Aux1_Archivos/: complejo.cpp  complejo_amiga.cpp  iteradores.cpp  makefile  maximo.cpp  rectangulo.cpp  rectangulo_constructores.cpp  rectangulo_ex1.cpp
Clases/Clase 3/Aux1_Archivos/Presentación/: main.tex
T1/: readme.md
T1/EstructurasCPP/: CMakeLists.txt  main.cpp
T1/EstructurasCPP/include/Circle/: circle.hpp
T1/EstructurasCPP/include/Poligono/: poligono.hpp
T1/EstructurasCPP/src/: CMakeLists.txt
T1/EstructurasCPP/test/: CMakeLists.txt  testPoligonoClassFixtures.cpp  testPuntoClassFixtures.cpp  testVectorClassFixtures.cpp
T1/include/Vector/: vector.hpp
T2/: CMakeLists.txt  gift_wrapping_results.csv  graham_scan_results.csv  main.cpp  poligons_gs.csv  poligons_gw.csv  readme.md
T2/EstructurasCPP/include/Punto/: punto.hpp
T2/EstructurasCPP/src/: CMakeLists.txt  circle.cpp
T2/EstructurasCPP/test/: CMakeLists.txt  testCircleClass.cpp  testPuntoClassFixtures.cpp
T2/experiment/: circle_point_gw.csv  comparison_random_pnts_file.csv  exp.ipynb  gift_wrapping_extrn_pts_results.csv  gift_wrapping_results.csv  graham_scan_extrn_pts_results.csv  graham_scan_results.csv  poligons_gs.csv  poligons_gs_extrn_pts.csv  poligons_gw.csv  poligons_gw_extrn_pts.csv  random_point_gw.csv  random_point_in.csv
T2/include/Poligono/: poligono.hpp
T2/include/Punto/: punto.hpp
T2/src/: CMakeLists.txt  ExperimentFunctions.cpp  GiftWrapping.cpp  GrahamScan.cpp  poligono.cpp  vector.cpp
T2/test/: CMakeLists.txt  expFuncsClassFixtures.cpp  testGiftWrappingClassFixtures.cpp  testGrahamScanClassFixtures.cpp  testIncrementalClassFixtures.cpp  testVectorClassFixtures.cpp
Tareas/T1/: CMakeLists.txt
Tareas/T1/include/Punto/: punto.hpp
Tareas/T1/src/: CMakeLists.txt  punto.cpp
Tareas/T1/test/: CMakeLists.txt  testPuntoClassFixtures.cpp
Tareas/T2/experiment/: circle_point_in.csv  comparison_circ_pnts_file.csv  exp.ipynb  poligons_in.csv  poligons_in_extrn_pts.csv
Tareas/T2/include/Poligono/: poligono.hpp
Tareas/T2/include/Punto/: punto.hpp
Tareas/T2/src/: GrahamScan.cpp  Incremental.cpp
Tareas/T2/test/: testGiftWrappingClassFixtures.cpp  testPoligonoClassFixtures.cpp
Tareas/T3/: CMakeLists.txt  delaunay.off  delaunay_disk.off  delaunay_pikachu.off  delaunay_rec.off  diskTV.cpp  main.cpp  pikachu.off  pikachuTV.cpp  prueba.off  readme.txt  rectangleTV.cpp  voronoi.off  voronoi_disk.off
Tareas/T3/include/Disk/: disk.hpp
Tareas/T3/include/Pikachu/: pikachu.hpp
Tareas/T3/include/Rectangle/: rectangle.hpp
Tareas/T3/src/: CMakeLists.txt  circle.cpp  disk.cpp  pikachu.cpp  rectangle.cpp
Tareas/T3/test/: CMakeLists.txt  testCircleClass.cpp  testCircleClassFixtures.cpp
cmake_ejemplo/Ejemplo-find_package/: CMakeLists.txt
cmake_ejemplo/ProyectoBase/: CMakeLists.txt
cmake_ejemplo/ProyectoBase/src/: CMakeLists.txt
lectura1/: apuntes_lectura1.txt
lecturas/lectura1/: apuntes_lectura1.txt
lecturas/lectura2/: apunte.txt
