add_executable(PuntoTests testPuntoClassFixtures.cpp)
add_executable(VectorTests testVectorClassFixtures.cpp)
add_executable(PoligonoTests testPoligonoClassFixtures.cpp)
add_executable(GiftWrappingTests testGiftWrappingClassFixtures.cpp)
add_executable(GrahamScanTests testGrahamScanClassFixtures.cpp)
add_executable(ExpFuncsTests expFuncsClassFixtures.cpp)
add_executable(IncrementalTests testIncrementalClassFixtures.cpp)

target_link_libraries(PuntoTests gtest_main punto)
target_link_libraries(VectorTests gtest_main vector)
target_link_libraries(PoligonoTests gtest_main poligono)
target_link_libraries(GiftWrappingTests gtest_main giftWrapping)
target_link_libraries(GrahamScanTests gtest_main grahamScan)
target_link_libraries(IncrementalTests gtest_main incremental)
target_link_libraries(ExpFuncsTests gtest_main experimentFuncs)

include(GoogleTest)
gtest_discover_tests(PuntoTests)
gtest_discover_tests(VectorTests)
gtest_discover_tests(PoligonoTests)
gtest_discover_tests(GiftWrappingTests)
gtest_discover_tests(GrahamScanTests)
gtest_discover_tests(IncrementalTests)
gtest_discover_tests(ExpFuncsTests)