add_executable(PuntoTests testPuntoClassFixtures.cpp)
add_executable(VectorTests testVectorClassFixtures.cpp)
add_executable(PoligonoTests testPoligonoClassFixtures.cpp)

target_link_libraries(PuntoTests gtest_main punto)
target_link_libraries(VectorTests gtest_main vector)
target_link_libraries(PoligonoTests gtest_main poligono)

include(GoogleTest)
gtest_discover_tests(PuntoTests)
gtest_discover_tests(VectorTests)
gtest_discover_tests(PoligonoTests)